Fix some icons were slightly cropped on Safari and Android/Brave (Chromium-based) For Safari, use vertical-align instead of margin-top/bottom For Chromium, the h3-font-size is now 19px if 1em=16px, not 16px*1.17=18.72px.

--- a/assets/static/assets/style/main/_settings.scss
+++ b/assets/static/assets/style/main/_settings.scss
@@ -89,8 +89,7 @@ $heading-icon-height: 0.8em;
     @extend %heading-icon;
     mask: $path no-repeat 0 0/#{$heading-icon-width} $heading-icon-height;
     @if $position-y {
-        margin-top: -$position-y;
-        margin-bottom: $position-y;
+        vertical-align: $position-y;
     }
 }
 
